# LiteGameFramework

./: .gitignore  CMakeLists.txt  config.json  main.cpp
include/: Game.h
include/Core/: Game.h  GameLoop.h  Scene.h  SceneManager.h
include/ECS/: ECSWorld.h  ECSWorld.inl  Entity.h  EntityManager.h  EntityManager.inl  RenderComponent.h  RenderSystem.h  System.h
include/ECS/Components/: CameraComponent.h  RenderComponent.h
include/ECS/Systems/: CameraSystem.h  IRenderSystem.h  ISystem.h  RenderSystem.h
include/ECS/Tags/: MainCameraTag.h
include/Platform/: FileSystem.h  IPlatform.h  ITime.h  IWindow.h  PlatformEnv.h  PlatformGLFW.h  TimeGLFW.h  WindowGLFW.h
include/Renderer/: GLMeshResource.h  IRenderer.h  OpenGLRenderer.h
include/Resources/: AudioClip.h  AudioLoader.h  IModelLoader.h  ITextureLoader.h  Mesh.h  Model.h  ModelLoader.h  ResourceManager.h  Texture.h  TextureLoader.h  Vertex.h
include/Utils/: Config.h  PlatformEnvFactory.h  PlatformType.h
src/Core/: Game.cpp  GameLoop.cpp  Scene.cpp  SceneManager.cpp
src/ECS/: ECSWorld.cpp  EntityManager.cpp  RenderSystem.cpp
src/ECS/Systems/: CameraSystem.cpp  RenderSystem.cpp
src/Platform/: FileSystem.cpp  PlatformGLFW.cpp  TimeGLFW.cpp  WindowGLFW.cpp
src/Renderer/: OpenGLRenderer.cpp
src/Resources/: AudioLoader.cpp  ModelLoader.cpp  ResourceManager.cpp  TextureLoader.cpp
src/Utils/: Config.cpp  PlatformEnvFactory.cpp
tests/Resources/: MockModelLoader.h  MockTextureLoader.h  ModelLoaderTest.cpp  ResourceManagerTest.cpp
